# stock-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  setup.cfg
nginx/: django.conf
src/: .env.example  Makefile  db_data_fixtures.json  order_test.json
src/api/: base_tests.py  basemodel.py  settings.py  urls.py  wsgi.py
src/api/authentication/: BearerTokenAuthentication.py  __init__.py
src/api/services_helpers/: helpers.py  printing.py
src/api/settings/: base.py  dev.py  prod.py
src/api/tests/: test_whatsapp.py
src/api/views/: whatsapp.py
src/customer/: admin.py  urls.py
src/customer/migrations/: 0001_initial.py
src/customer/models/: __init__.py  customer.py
src/customer/serializers/: customer.py
src/customer/views/: customer.py
src/order/: admin.py  urls.py
src/order/migrations/: 0001_initial.py  0002_alter_order_discount.py  0002_alter_productorder_quantity.py  0003_order_customer.py
src/order/models/: __init__.py  order.py  product_order.py
src/order/serializers/: order.py
src/order/tests/: tests.py
src/order/views/: order.py
src/product/: admin.py  tests.py  urls.py
src/product/migrations/: 0001_initial.py  0002_alter_product_price_purchase.py
src/product/models/: __init__.py  product.py
src/product/serializers/: product.py
src/product/tests/: test_views.py
src/product/views/: list.py  product.py
src/purchase/: admin.py  urls.py
src/purchase/migrations/: 0001_initial.py  0002_purchase_total_price.py
src/stock/: admin.py  tests.py  urls.py
src/users/: admin.py  urls.py
(+19 files in other folders)
